# python-agent-safety

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  POSITIONING.md  README.md  SECURITY.md  THREAT_MODEL.md  TUTORIAL.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: SCORECARD.md  attack_suite.py
examples/: benchmark.py  easy.py  first_agent.py  hardening.py  mcp_agent.py  multi_agent.py  providers.py  quickstart.py
src/agent_safety/: __init__.py  action.py  approval.py  audit.py  constitution.py  context.py  decorators.py  easy.py  exceptions.py  guards.py  integrations.py  limits.py  mcp.py  permissions.py  policy.py  preview.py  prices.py  quota.py  reasoning.py  runtime.py  sandbox.py  schema.py  tracing.py  transaction.py  usage.py  validation.py
tests/: test_adoption.py  test_advanced.py  test_anthropic_live.py  test_approval.py  test_async.py  test_attack_suite.py  test_audit.py  test_context.py  test_control_flow.py  test_deadline.py  test_decorators.py  test_easy.py  test_gemini_live.py  test_guards.py  test_integrations.py  test_limits.py  test_mcp.py  test_observability.py  test_openai_live.py  test_permissions.py  test_quota.py  test_reasoning.py  test_runtime.py  test_sandbox.py  test_schema.py  test_security_guards.py  test_serialization_and_parse.py  test_transaction.py  test_usage.py  test_validation.py
