[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-safety"
version = "0.2.0"
description = "Idiomatic, provider-agnostic Python constructs for AI-agent safety: scoped permissions, prompt/input/output guards, quotas, audit hooks, and Claude/OpenAI/Gemini tool-call integration."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["ai", "agents", "safety", "permissions", "guardrails", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
