[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-safety"
version = "0.3.0"
description = "Idiomatic, provider-agnostic Python constructs for AI-agent safety: scoped permissions, prompt/input/output guards, sandbox + SSRF guards, quotas, rate limits, loop detection, human-in-the-loop approval, audit hooks, and Claude/OpenAI/Gemini tool-call integration."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["ai", "agents", "safety", "permissions", "guardrails", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.8", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_safety = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
files = ["src"]
strict = true
# No `python_version` pin: newer mypy refuses to *target* 3.9, and the code is
# written with `from __future__ import annotations` + classic typing spellings,
# so it checks cleanly on any interpreter. Actual 3.9 runtime support is verified
# by the pytest matrix (3.9–3.12), not by mypy's target version.
# Tests exercise intentionally loose/dynamic shapes; the shipped library is what
# we hold to a strict bar.
exclude = ["tests/", "examples/"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# Substance over style: pyflakes (F), import order (I), bugbear (B), and the
# core pycodestyle checks. We intentionally keep the classic `typing` spellings
# (Tuple/Optional/...) for clean 3.9 support, so the pyupgrade (UP) ruleset is
# deliberately not enabled.
select = ["E", "F", "I", "B", "W"]
ignore = ["E501"]  # long lines are caught in review, not mechanically
