[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-safety"
dynamic = ["version"]
description = "Idiomatic, zero-dependency, provider-agnostic Python safety layer for AI agents: least-privilege permissions, prompt/input/output guards, sandbox + SSRF guards, quotas/rate/deadline/concurrency/risk budgets, loop detection, human-in-the-loop approval, constitutional rules, action previews, honeytokens, audit/tracing, and Claude/OpenAI/Gemini/MCP tool-call integration."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Prateek Tandon" }]
keywords = [
    "ai", "agents", "agent-safety", "llm", "guardrails", "tool-use",
    "least-privilege", "permissions", "prompt-injection", "mcp", "security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/prateekt/python-agent-safety"
Repository = "https://github.com/prateekt/python-agent-safety"
Issues = "https://github.com/prateekt/python-agent-safety/issues"
Changelog = "https://github.com/prateekt/python-agent-safety/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.8", "ruff>=0.4"]

[tool.setuptools.dynamic]
version = { attr = "agent_safety.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_safety = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]   # "." lets tests import the benchmarks/ attack suite

[tool.mypy]
files = ["src"]
strict = true
# No `python_version` pin: newer mypy refuses to *target* 3.9, and the code is
# written with `from __future__ import annotations` + classic typing spellings,
# so it checks cleanly on any interpreter. Actual 3.9 runtime support is verified
# by the pytest matrix (3.9–3.12), not by mypy's target version.
# Tests exercise intentionally loose/dynamic shapes; the shipped library is what
# we hold to a strict bar.
exclude = ["tests/", "examples/"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# Substance over style: pyflakes (F), import order (I), bugbear (B), and the
# core pycodestyle checks. We intentionally keep the classic `typing` spellings
# (Tuple/Optional/...) for clean 3.9 support, so the pyupgrade (UP) ruleset is
# deliberately not enabled.
select = ["E", "F", "I", "B", "W"]
ignore = ["E501"]  # long lines are caught in review, not mechanically
